--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,11 +39,10 @@ footer {
  
 }
 /* Common */
-h1 {
-  padding-left: 5px;
+.product-banner {
   margin-top: 10px;
   font-size: 1.8rem;
-  padding: 1rem 0;
+  padding: 1rem ;
   color: #fff;
   font-weight: bold;
   background-color: #00A349;
@@ -685,11 +684,12 @@ img.large {
 
 .footer-child{
   margin: 1rem;
-  width: 300px;
+  width: 30rem;
 }
 
 .contact-info{
   height: 33rem;
+  width: 35rem!important;;
 }
 
 .sale-dept{
@@ -709,7 +709,6 @@ img.large {
 
 .footer h5{
   text-transform: uppercase;
-  text-align: center;
   font-weight: bold;
 }
 
@@ -738,7 +737,7 @@ img.large {
   transform: scale(1.2);
 }
 
-.fa-facebook{
+.fa-linkedin{
   color: #0b83ed;
 }
 
