--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,6 +79,7 @@ button {
   -moz-osx-font-smoothing: grayscale;
 }
 button {
+  border: none!important;
   background-color: #f8f8f8;
   cursor: pointer;
 }
@@ -159,6 +160,13 @@ a.brand img{
 
 .navbar{
   padding:0;
+}
+
+.lower-nav{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .rowe {
@@ -305,7 +313,7 @@ img.large {
 }
 
 .productcard-body{
-  max-height: 70%;
+  max-height: 100%;
 }
 .productcard-body ul{
   padding: 10px;
@@ -389,6 +397,8 @@ img.large {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+
 /* Checkout Steps */
 .checkout-steps > div {
   border-top: 0.3rem #c0c0c0 solid;
@@ -419,8 +429,17 @@ img.large {
   margin: 0 0.2rem;
 }
 
-/* Search */
+.fa-shopping-basket{
+  font-size: 3.5rem;
+}
 
+/* Search */
+.small-searchbar{
+  border: none;
+  font-size: 3.5rem;
+  background-color: #fff;
+  color:#00A349;
+}
 .search-bar{
   position: relative;
   width: 30%;
@@ -450,6 +469,13 @@ img.large {
   margin-left: 0.5rem;
   outline: none;
 }
+
+.small-searchbar{
+  display: none;
+  outline: none!important;
+}
+
+
 .active {
   font-weight: bold;
 }
@@ -501,6 +527,7 @@ img.large {
   display: flex;
   justify-content: center;
   margin: 20px 0;
+  border: 0.1rem solid #00A349;
 }
 
 .dropbtn {
@@ -561,7 +588,7 @@ img.large {
 }
 
 .dropdownmenu-content a {
-  width: 50%;
+  width: 100%;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -725,17 +752,17 @@ margin: 30px;
 }
 
 .contact-info{
-  height: 33rem;
+  height: 25rem;
   width: 35rem!important;;
 }
 
 .sale-dept{
-  height: 12rem;
+  height: 10rem;
   text-align: center;
 }
 
 .tech-dept{
-  height: 12rem;
+  height: 10rem;
   text-align: center;
 }
 
@@ -857,22 +884,66 @@ margin: 30px;
     width: 80%;
   }
 
+  #scrolltotop{
+    position: fixed;
+    display: grid;
+    place-items: center;
+    bottom: 4rem;
+    right: 4rem;
+    font-size: 4rem;
+    background-color: #3C474B;
+    color: #fff;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 10px;
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  #scrolltotop:active {
+    background-color: #555;
+  }
+  #scrolltotop.show {
+    opacity: 1;
+    visibility: visible;
+  }
 
 /*Responsive*/
 
-@media screen and (max-width: 1100px){
-  
+@media screen and (max-width: 1150px){
+  .cart-screen{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .cartscreen-cart{
+    width: 100%;
+    height: 50%;
+  }
   
 }
 
 @media screen and (max-width: 1024px){
-.content{
-  padding: 0;
-}
-
-  .search-bar{
-    width: 50%;
+  .content{
+    padding: 0;
   }
+
+  .lower-content{
+    flex-direction: column;
+    align-items: center;
+  }
+  .product-box{
+    width: 100%!important;
+  }
+  .sidebar{
+    width: 70%!important;
+  }
+  .search-bar{
+    width: 30%;
+  }
+
+  
 
   .search-bar button{
     width: 100px;
@@ -880,7 +951,41 @@ margin: 30px;
 }
 
 @media screen and (max-width: 800px){
-  
+
+  .lower-nav{
+    justify-content: space-around;   
+  }
+
+  .dropdownmenu-content a {
+    width: 100%;
+    color: black;
+    padding: 5px 8px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .search-bar{
+    width:50%;
+    position: absolute;
+    display: none;
+    bottom: -2rem;
+    left: 20rem;
+    z-index: 1;
+  }
+
+  .search-bar.show{
+    display: block;
+  }
+
+  .small-searchbar{
+    display: block!important;
+    position: relative!important;
+    border-radius: 50%!important;
+    width: 5rem!important;
+    margin:0;
+    outline: none!important;
+  }
+
   .column{
     width: 100%;
     height: auto;
@@ -891,13 +996,20 @@ margin: 30px;
   }
 
   .carousel{
-    width: 100%;
+    width: 100%!important;
   }
 
   .news{
     width: 100%;
     margin-left: 0;
   }
+
+  .detail-page .card{
+    width: 95%;
+    display: flex;
+  }
+
+  
 
   .product-container{
     flex-direction: column;
@@ -907,22 +1019,33 @@ margin: 30px;
     width:73%;
   }
 
- 
-
-
   .productscreen-card{
-    max-height: 30rem !important;
+    max-height: 28rem !important;
+
   }
 
+  .collect-email form{
+    width: 70%;
+  }
 
 }
 
 @media screen and (max-width: 600px){
-  
+  .sidebar{
+    width: 100%!important;
+  }
 }
 
 @media screen and (max-width: 500px){
   .hotline,.email{
     display: none;
+  }
+
+  .collect-email input{
+    width: 75%;
+  }
+
+  .collect-email button{
+    width: 20%;
   }
 }
