--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,7 +79,6 @@ button {
   -moz-osx-font-smoothing: grayscale;
 }
 button {
-  border: none!important;
   background-color: #f8f8f8;
   cursor: pointer;
 }
@@ -645,7 +644,21 @@ img.large {
   width: 100%;
   background-color:#00A349; 
   padding: 5px 20px; 
-  color: #fff;    
+  margin-bottom: 1rem;    
+}
+
+.news-title i{
+  color:#f08000;
+}
+
+.news-title a{
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+.news-title a:hover{
+  color: #f08000;
 }
 
 .news-content i {
@@ -688,6 +701,104 @@ margin: 10px;
   max-width: 40rem;
   float: right;
 margin: 30px;
+}
+
+/*All news page*/
+
+.nav-news{
+  width: 20%;
+  border: .1rem solid #c0c0c0;
+}
+
+.nav-news h3{
+  text-align: center;
+  color:#f08000;
+  font-weight: bold;
+}
+
+.tab-news{
+  width: 80%;
+  padding: 1rem 3rem;
+}
+
+.news-component{
+  border: .1rem solid #c0c0c0;
+  display: flex;
+  justify-content: space-between;
+  height: 15rem;
+  margin-bottom: 2rem;
+  padding: 0.8rem 1.6rem;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#d2ebf9+0,feffff+100 */
+  background: #d2ebf9; /* Old browsers */
+  background: -moz-linear-gradient(left,  #d2ebf9 0%, #feffff 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  #d2ebf9 0%,#feffff 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right,  #d2ebf9 0%,#feffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d2ebf9', endColorstr='#feffff',GradientType=1 ); /* IE6-9 */
+  border-radius: .3rem;
+}
+
+.newscomponent-title{
+  width: 70%;
+}
+
+.to-news{
+  padding: 0.5rem;
+  color: #f08000;
+  background-color: #fff;
+  height: 3rem;
+  border: .1rem solid #f08000;
+}
+
+.to-news:hover{
+  color: #fff;
+  background-color: #f08000;
+}
+
+/*Intro page*/
+
+.intro-page h1{
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#002400+0,005700+17,008a00+33,52b152+67,83c783+83,b4ddb4+100 */
+  background: #002400; /* Old browsers */
+  background: -moz-linear-gradient(left, #fff,  #007a37 17%, #00A349 33%,  #83c783 83%, #b4ddb4 100%, #fff ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #fff,  #007a37 17%,#00A349 33%,#83c783 83%,#b4ddb4 100%, #fff); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #fff,  #007a37 17%,#00A349 33%,#83c783 83%,#b4ddb4 100%, #fff); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002400', endColorstr='#b4ddb4',GradientType=1 ); /* IE6-9 */
+  width: 50%;
+  color: #fff;
+  padding-left: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.intro-image{
+  width: 4rem;
+  height: 4rem;
+  margin-right: 2rem;
+  border-radius: 50%;
+}
+
+.company-name{
+  color: #00A349;
+  text-transform: uppercase;
+  font-size: 2rem;
+}
+
+.intro-page h2{
+  margin-top: 3rem;
+  color: #f08000;
+  font-weight: bold;
+}
+
+.intro-page li{
+  padding-left: 3rem;
+}
+
+.intro-info{
+  margin-top: 3rem;
+}
+
+.office-name{
+  color: #f08000;
 }
 
 .nav-link.active{
@@ -756,6 +867,16 @@ margin: 30px;
   width: 35rem!important;;
 }
 
+.contact-info a{
+  color:#fff;
+  margin-left: 5px;
+  text-decoration: underline;
+}
+
+.contact-info a:hover{
+  color: #f08000;
+}
+
 .sale-dept{
   height: 10rem;
   text-align: center;
@@ -771,7 +892,7 @@ margin: 30px;
   padding: 0;
 }
 
-.footer h5{
+.footer h1{
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -786,6 +907,7 @@ margin: 30px;
   margin-bottom: 20px;
   text-align: center;
 }
+
 
 .other-social{
   margin: 30px 0;
