--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   height: 100vh;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -209,7 +209,7 @@ img {
   border-radius: 0.5rem;
 }
 img.small {
-  max-width: 10rem;
+  max-width: 15rem;
   width: 100%;
 }
 img.medium {
@@ -230,6 +230,10 @@ img.large {
   padding-left: 3rem;
 }
 
+.detail-product h1{
+  text-transform: uppercase;
+}
+
 .detail-page .col{
   height: 30rem !important;
 }
@@ -237,7 +241,7 @@ img.large {
 /* Card */
 .card {
   width: 22rem;
-  height: 35rem;
+  height: 30rem;
   border: 0.1rem #c0c0c0 solid;
   background-color: #f8f8f8;
   border-radius: 0.5rem;
@@ -278,7 +282,7 @@ img.large {
 }
 
 .card .details-btn{
-  padding: 10px;
+  padding: 2px 10px;
   background-color: #00A349;
   color: #fff;
   border: 1px solid #00A349;
@@ -286,6 +290,24 @@ img.large {
   position: absolute;
   left: 1rem;
   bottom: 1rem;
+}
+
+.product-card{
+  display: flex;
+  align-items: center;
+}
+
+.product-card img{
+  width: 15rem;
+  height: auto;
+  max-width: 15rem;
+  display: flex;
+  justify-content: center;
+}
+
+.card-header{
+  height: 50%;
+  padding:0;
 }
 
 .card .details-btn:hover{
@@ -479,6 +501,20 @@ img.large {
   font-weight: bold;
 }
 
+.tab-pane{
+  font-weight: 300!important;
+  white-space: pre-wrap;
+  padding: 1rem 3rem;
+}
+
+.nav-pills{
+  border-bottom: .1rem solid #c0c0c0;
+}
+
+textarea{
+  white-space: pre-wrap;
+}
+
 /* Map */
 .full-container {
   margin: -1rem;
@@ -631,18 +667,33 @@ img.large {
 }
 /*Slideshow*/
 .carousel{
-  width: 70%!important;
+  width: 75%!important;
+  height: 300px;
+}
+
+.carousel button{
+  border: none!important;
+  outline: none;
+}
+
+.carousel button:hover{
+  background-color: rgba(0,0,0,0.2);
+}
+
+.slide img{
+  max-width: 100%;
+  height: 30rem;
 }
 
 /*Tin tuc*/
 .news{
-  width: 28%;
+  width: 24%;
   margin-left: 1%;
 }
 
 .news-title{
   width: 100%;
-  background-color:#00A349; 
+  background-color: #007a37; 
   padding: 5px 20px; 
   margin-bottom: 1rem;    
 }
@@ -897,6 +948,15 @@ margin: 30px;
   font-weight: bold;
 }
 
+.footer a{
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer a:hover{
+  color: #f08000;
+}
+
 .footer p,h5{
   margin: 0;
 }
@@ -950,7 +1010,9 @@ margin: 30px;
   .lower-content{
     display: flex;
   }
-
+  .product-box{
+    width: 75%;
+  }
   .sidebar{
     margin-top: 10px;
     width: 25%;
