--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -256,7 +256,7 @@ img.large {
 }
 
 .detail-page .col{
-  height: 30rem !important;
+  height: auto;
 }
 
 .lower-detailpage{
@@ -775,6 +775,7 @@ img.large {
   padding-left: 2rem;
   text-decoration: none;
   color: #000;
+  margin-top: 1rem;
 }
 
 .news-content a:hover{
@@ -783,7 +784,6 @@ img.large {
 
 .news-content p{
   margin: 0;
-  padding-left: 1rem;
   color: #000;
 }
 
@@ -791,9 +791,6 @@ img.large {
   color: #e67e22;
 }
 
-.news-content{
-  margin-top: 20px;
-}
 
 /*News page*/
 .newspage{
@@ -802,7 +799,7 @@ img.large {
 }
 
 .news-sidebar{
-  width: 20%;
+  width: 25rem;
   display: flex;
   flex-direction: column;
 }
@@ -1049,13 +1046,31 @@ margin: 10px;
   color: #00A349;
 }
 
-.logo-marquee{
+.marquee {
+  height: 10rem;
   width: 100%;
-  display: flex;
-  justify-content: space-around;
+  border: 2px solid #eee;
+  overflow: hidden;
+  box-sizing: border-box;
+  position: relative;
+  margin: 0 auto;
 }
 
-marquee img{
+.marquee--inner {
+  display: block;
+  width: 200%;
+  height: 10rem;
+  margin: 1rem 0;
+  position: absolute;
+  animation: marquee 20s linear infinite;
+}
+
+@keyframes marquee {
+  0% { left: 0; }
+  100% { left: -100%; }
+}
+
+.marquee img{
   margin: 0 2rem;
 }
 
@@ -1218,37 +1233,17 @@ marquee img{
     text-decoration: underline;
   }
   
-  .sidebar-content a{
-    text-decoration: none;
-    color: #000;
-  }
-  
-  .sidebar-content a:hover{
-    text-decoration: underline;
-  }
-  
-  .content-img img{
+  .sidebar-content{
     width: 100%;
+    height:auto;
+    display: flex;
+    justify-content: center;
   }
   
-  .sub-content{
-    margin-bottom: 20px;
-    border-bottom: 1px solid #c0c0c0;
+  .sidebar-content iframe{
+    margin-top: 1rem;
   }
   
-  .sub-content a{
-    text-decoration: none;
-    color: #000;
-  }
-  .sub-content img{
-    width: 20%;
-    float: left;
-    margin: 0 10px;
-  }
-  
-  .sub-content p{
-    width: 80%;
-  }
 
   #scrolltotop {
     display: none;
@@ -1304,10 +1299,16 @@ marquee img{
     width: 30%;
   }
 
-  
+  .productscreen-card{
+    height: 27rem!important;
+  }
 
   .search-bar button{
     width: 100px;
+  }
+
+  .newspage{
+    flex-direction: column;
   }
 }
 
@@ -1316,6 +1317,9 @@ marquee img{
   .sidebar{
     width: 100%!important;
   }
+  
+  
+
 
   .upper-content{
     width: 100%!important;
