--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -291,14 +291,14 @@ img.large {
   margin: auto;
   display: block;
   width: 80%;
-  max-width: 250px!important;
+  max-width: 300px!important;
 }
 
 /* Caption of Modal Image */
 #caption {
   margin: auto;
   display: block;
-  width: 80%;
+  width: 100%;
   max-width: 700px;
   text-align: center;
   color: #ccc;
@@ -401,7 +401,8 @@ img.large {
   border: 1px solid #00A349;
   border-radius: 3px;
   position: absolute;
-  left: 1rem;
+  right: 1rem;
+  bottom: 1rem;
 }
 
 .product-card{
@@ -1298,7 +1299,6 @@ margin: 10px;
   /*Sidebar*/
 
   .sidebar{
-    margin-top: 10px;
     width: 30%;
     display: flex;
     flex-direction: column;
