--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -578,6 +578,7 @@ img.large {
   margin: 0;
   margin-top: 0.4rem;
   border-radius: 0.5rem;
+  z-index: 20;
 }
 .dropdown:hover .dropdown-content {
   display: block;
@@ -828,19 +829,17 @@ img.large {
 
 .dropdownmenu-content a {
   width: 100%;
-  color: black;
+  color: #007a37;
   font-weight: bold;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
-
-/* Change color of dropdown links on hover */
-.dropdownmenu-content a:hover {
-  background-color: #ddd;
-  color: #007a37;
+.dropdownmenu-content a:hover{
+  color:#e67e22!important;
 }
+
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block!important;}
