--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -189,6 +189,10 @@ a.brand img{
   outline: none;
 }
 
+.menu-responsive:focus{
+  border:none;
+}
+
 .menu-container{
   display: flex;
   flex-wrap: wrap;
@@ -558,9 +562,6 @@ img.large {
 
 /* Dropdown */
 
-#category{
-  text-transform: uppercase;
-}
 
 .dropdown {
   display: inline-block;
@@ -1474,12 +1475,19 @@ margin: 10px;
 
   .icon-container{
     display: flex;
-    justify-content: space-around;
     align-items: center;  
-    align-items: center;
     margin-right: 20%;
     width: 30%;
   }
+
+  .icon-container button{
+    margin-bottom: 0.5rem;
+  }
+
+  .icon-container a{
+    margin-left: 2.5rem;
+  }
+
 
   .menu-container{
     position: absolute;
@@ -1524,7 +1532,10 @@ margin: 10px;
     width: 100%;
   }
   
-  
+  .p2{
+    margin-top: 1rem!important;
+  }
+
   .introinfo-field{
     width: 100%;
     padding-top: 3rem;
@@ -1560,7 +1571,7 @@ margin: 10px;
     display: block!important;
     position: relative!important;
     border-radius: 50%!important;
-    margin:0;
+    margin:auto 0;
     outline: none!important;
     border: none!important;
   }
@@ -1636,7 +1647,11 @@ margin: 10px;
 @media screen and (max-width: 500px){
 
   .menu-container{
-    width:70%;
+    width:50%;
+  }
+
+  .dropdown-content{
+    margin-right: 20rem;
   }
 
   .subcategory{
