--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,7 @@ body {
     'main'
     'footer';
   grid-template-columns: 1fr;
-  grid-template-rows: 130px 1fr auto;
+  grid-template-rows: 180px 1fr auto;
   height: 100%;
 }
 header {
@@ -34,7 +34,7 @@ header {
 
 main {
   grid-area: main;
-  padding: 1rem 5rem;
+  padding: 1rem;
 }
 footer {
   grid-area: footer;
@@ -102,7 +102,7 @@ button.small {
 /* Header */
 header a {
   color: #00A349;
-  font-size: 18px;
+  font-size: 16px;
   margin: 0 10px;
   display: flex;
   align-items: center;
@@ -166,7 +166,7 @@ a.brand img{
   margin-left: 0.2rem;
 }
 
-.navbar{
+.nav-bar{
   padding:0;
   margin-top:2.5rem;
 }
@@ -178,20 +178,40 @@ a.brand img{
   align-items: center;
 }
 
-.menu-responsive{
-  display: none;
-  position: absolute;
-  right: 1rem;
-  background:none;
-  border: none;
-  color: #00A349;
-  font-size: 2rem;
-  outline: none;
+.navbar{
+  background-color: #007a37;
+  padding: 0 7rem;
+  z-index: 20;
 }
 
-.menu-responsive:focus{
-  border:none;
+.navbar .fas{
+  font-size: 1.6rem;
+  margin-bottom: .5rem;
 }
+
+.nav-link{
+  display: flex;
+  align-items: center;
+  color: #fff!important;
+  padding: 1rem;
+}
+
+.nav-link:hover{
+  background-color: #015b2a;
+}
+
+.navbar-toggler{
+  height: 4rem;
+  width: 4rem;
+}
+
+.navbar-toggler-icon{
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
+
+
 
 .menu-container{
   display: flex;
@@ -246,13 +266,43 @@ a.brand img{
   margin-bottom: .5rem;
 }
 
-/*Home page*/
+/*Sidebar*/
 
-.upper-content{
-  width: 70%;
-  display: flex;
-  flex-direction: column;
+.category{
+  background-color: #007a37;
+  margin-top: 1rem;
+  padding: 5px 20px;
+  color: #fff;
+  cursor:default;
 }
+
+.category-menu li{
+  margin:0;
+  width: 100%;
+  position: relative;
+  border-bottom: .1rem solid #f0f0f0;
+}
+
+.category-menu li a{
+  display: flex;
+  width: 100%!important;
+  padding: .5rem 2rem;
+  color: #00A349;
+  font-weight: bold;
+}
+
+.category-menu li a:hover{
+  color: #fff;
+  background-color: #00A349;
+}
+
+.main-content{
+  width: 80%;
+  margin-left: 20%;
+  padding-left: .5rem;
+}
+
+/*Home page*/
 
 
 /* Image */
@@ -297,6 +347,14 @@ img.large {
 
 .lower-detailpage{
   padding: 0 7rem;
+}
+
+.lower-detailpage .nav-link{
+  color: #000!important;
+}
+
+.lower-detailpage .nav-link:hover{
+  background-color: #00A349!important;
 }
 
 #pic {
@@ -845,6 +903,7 @@ img.large {
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block!important;}
 
+
 /* Clear floats after the columns */
 
 .column {
@@ -867,11 +926,14 @@ img.large {
 /*Slideshow*/
 .carousel{
   width: 100%!important;
+  height: auto;
+  z-index: -1;
 }
 
 .carousel button{
   border: none!important;
   outline: none;
+  max-height: 100%!important;
 }
 
 .carousel button:hover{
@@ -887,6 +949,16 @@ img.large {
 .news{
   width: 100%;
 }
+
+.resdropdown-btn{
+  background: none;
+  border: none;
+  font-size: 1.6rem;
+  padding: 0 2rem;
+  color: #fff;
+  visibility: hidden;
+}
+
 
 .news-title{
   width: 100%;
@@ -915,14 +987,13 @@ img.large {
 }
 
 .news-content {
-  padding-left: 2rem;
   text-decoration: none;
   color: #000;
   margin-top: 1rem;
 }
 
 .news-content a:hover{
-  color: #e67e22;
+  color: #e67e22!important;
 }
 
 .news-content p{
@@ -1049,6 +1120,7 @@ margin: 10px;
 .search-screen ul li{
   border-bottom: .1rem solid #f0f0f0;
   margin:0;
+  width: 20rem;
 }
 
 .search-screen li a{
@@ -1064,36 +1136,30 @@ margin: 10px;
   color: #00A349;
 }
 
-.subcategory{
-  width: 25%;
-}
-
-.subcategory ul{
-  
-  height: 40rem;
-  overflow-y: scroll;
-}
 
 .search-box{
-  width: 75%;
+  width: 100%;
+  justify-content: flex-start!important;
 }
 
 .search-result{
   padding: 1rem 0;
+  padding-left: 3rem;
   font-weight: bold;
+}
+
+.subcategory-container{
+  display: flex;
+  max-width: 100%;
+  flex-wrap: wrap;
 }
 
 
 /*Intro page*/
 
 .intro-page{
-  padding: 1rem 8rem;
-  display: flex;
-  justify-content: space-between;
-}
+  padding: 1rem;
 
-.intro-content{
-  width: 60%;
 }
 
 .intro-info{
@@ -1101,7 +1167,6 @@ margin: 10px;
 }
 
 .introinfo-field{
-  width: 30%;
   padding-top: 3rem;
 }
 
@@ -1150,8 +1215,9 @@ margin: 10px;
   color: #f08000;
 }
 
-.nav-link.active{
+.lower-detailpage .nav-link.active{
   background-color: #00A349!important;
+  color: #fff!important;
 }
 
 .contact-sale{
@@ -1204,6 +1270,80 @@ margin: 10px;
   margin: 1rem 0;
   position: absolute;
   animation: marquee 20s linear infinite;
+}
+
+/*Service Page*/
+
+.service-page{
+  padding: 1rem;
+}
+
+.service-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.service-card{
+  margin-bottom: 5rem;
+  width: 40rem;
+  height: 37rem;
+  box-shadow: 1px 1px 1px 1px #f0f0f0;
+  border-radius: .3rem;
+  overflow: hidden;
+  transition: all 0.3s ease;
+}
+
+.service-card img{
+  max-width: 40rem;
+}
+
+.service-card:hover{
+  box-shadow: 1px 2px 2px 2px #c0c0c0;
+  transform: scale(1.01);
+}
+
+.service-card-content h2:hover{
+  color:#e67e22;
+}
+
+.service-card-content{
+  padding: 1rem;
+}
+
+.service-card-content h2{
+  color: #007A37;
+  font-weight: bold;
+}
+
+.service-card-content p{
+  color: #000;
+}
+
+.service-detail-page h1{
+  text-align: center;
+  font-weight: bold;
+}
+
+.service-detail{
+  padding: 1rem;
+}
+
+.service-detail img{
+  float: left;
+  margin-right: 3rem;
+  margin-bottom: 1rem;
+}
+
+.service-detail ul{
+  list-style:disc;
+  padding-left: 2rem;
+}
+
+/*Contact Page*/
+
+.contact-page{
+  padding: 1rem;
 }
 
 @keyframes marquee {
@@ -1352,9 +1492,10 @@ margin: 10px;
   /*Sidebar*/
 
   .sidebar{
-    width: 30%;
+    width: 20%;
     display: flex;
     flex-direction: column;
+    float: left;
   }
   
   .sidebar-title{
@@ -1469,6 +1610,38 @@ margin: 10px;
 
 @media screen and (max-width: 800px){
 
+  .service-container{
+    display: block;
+  }
+  .service-page{
+    padding:0;
+  }
+
+  .main-content{
+    width: 100%;
+    margin-left:0;
+  }
+
+  .news-content{
+    display: none;
+  }
+
+  .category{
+    margin-bottom: 1rem;
+  }
+
+  .category-menu{
+    display: none;
+  }
+
+  .res{
+    display: none;
+  }
+
+  .resdropdown-btn{
+    visibility: visible;
+  }
+
   .menu-responsive{
     display: block;  
   }
@@ -1476,7 +1649,6 @@ margin: 10px;
   .icon-container{
     display: flex;
     align-items: center;  
-    margin-right: 20%;
     width: 30%;
   }
 
@@ -1489,24 +1661,8 @@ margin: 10px;
   }
 
 
-  .menu-container{
-    position: absolute;
-    align-items: center;
-    flex-direction: column;
-    right: 0;
-    top: 10rem;
-    background-color: #fff;
-    z-index : 15; 
-    border-left: .1rem solid #c0c0c0;
-    display: none;
-  }
-
-  .menu-container a{
-    padding: .8rem 2rem;
-  }
-
   .dropdown-nav{
-    margin-right: 13rem;
+    margin-top: 1rem;
     background-color: #fff!important;
     border: .1rem solid #f0f0f0;
   }
@@ -1558,7 +1714,7 @@ margin: 10px;
     width:50%;
     position: absolute;
     display: none;
-    bottom:-2rem;
+    top:10rem;
     z-index: 1;
     left:30%;
   }
@@ -1627,9 +1783,6 @@ margin: 10px;
 
 
 @media screen and (max-width: 600px){
-  .sidebar{
-    width: 100%!important;
-  }
   
   .detail-page{
     padding: 0;
@@ -1651,12 +1804,9 @@ margin: 10px;
   }
 
   .dropdown-content{
-    margin-right: 20rem;
+    z-index: 30;
   }
 
-  .subcategory{
-    width: 35%;
-  }
 
   .search-box{
     width: 65%;
@@ -1704,5 +1854,11 @@ margin: 10px;
     width: 100%;
   }
 
-  
+  .service-card{
+    width: 30rem;
+  }
+
+  .service-card img{
+    max-width: 30rem;
+  }
 }
