--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@ body {
   word-wrap: break-word;
   margin: 0;
   height: 100vh;
+  max-width: 100vw;
   font-size: 1.4rem;
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -106,6 +107,7 @@ header a {
   margin: 0 10px;
   display: flex;
   align-items: center;
+  font-weight: bold;
 }
 
 header i{
@@ -182,6 +184,18 @@ a.brand img{
   background-color: #007a37;
   padding: .5rem 7rem;
   z-index: 5;
+}
+
+.navbar-dark .navbar-toggler{
+  color: #fff!important;
+  font-weight: bold;
+}
+
+.navbar-dark .navbar-nav .nav-link{
+  font-weight: bold;
+  margin: 0;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .navbar .fas{
@@ -330,9 +344,18 @@ img.large {
   justify-content: center;
   display: flex;
   align-items: center;
+  width: 25rem;
 }
 
+.detail-product{
+  width: 40rem;
+}
 
+.product-detail-submit{
+  width: 25rem;
+  display: flex;
+  justify-content: center;
+}
 
 .detail-product h1{
   text-transform: uppercase;
@@ -345,6 +368,8 @@ img.large {
 
 .detail-page{
   padding: 0 5rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .detail-page .col{
@@ -375,7 +400,7 @@ img.large {
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 6; /* Sit on top */
+  z-index: 40; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
@@ -691,9 +716,11 @@ img.large {
   background-color: #fff;
   color:#00A349;
 }
+
 .search-bar{
   position: relative;
   width: 30%;
+  z-index: 30!important;
 }
 .search button {
   position: absolute;
@@ -1014,6 +1041,10 @@ img.large {
   display: flex;
 }
 
+.newspage h1{
+  color: #00A349;
+}
+
 .news-sidebar{
   width: 25rem;
   display: flex;
@@ -1219,6 +1250,10 @@ margin: 10px;
   margin-top: 3rem;
 }
 
+.intro-page i{
+  color: #e67e22;
+}
+
 .office-name{
   color: #f08000;
 }
@@ -1288,6 +1323,10 @@ margin: 10px;
 
 .service-page{
   padding: 1rem;
+}
+
+.service-detail-page{
+  padding: 2rem;
 }
 
 .service-container{
@@ -1570,6 +1609,17 @@ margin: 10px;
     height: auto;
   }
   
+  .counter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    border-radius: .4rem;
+    margin-top: 3rem;
+  }
+  .counter a{
+    display: none!important;
+  }
 
 /*Responsive*/
 
@@ -1623,10 +1673,53 @@ margin: 10px;
 
 @media screen and (max-width: 800px){
 
+  .image-product{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
   
-.category-menu {
-  max-height: 30rem;
-}
+  .detail-product{
+    width: 100%;
+  }
+  
+  .product-detail-submit{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .detail-page{
+    padding:0;
+    align-items: center;
+  }
+
+  .lower-detailpage{
+    padding: 0;
+  }
+
+  .lower-detailpage img{
+    max-width: 90%;
+  }
+
+  .col-05{
+    flex: 1 1 20rem;
+  }
+
+  .detail-product{
+    width: 100%;
+  }
+
+  .service-detail-page{
+    padding-top: 1rem;
+  }
+  
+
+  .category-menu {
+    max-height: 30rem;
+  }
+
 
   .carousel{
     z-index: -1;
@@ -1805,7 +1898,15 @@ margin: 10px;
 
 
 @media screen and (max-width: 600px){
-  
+
+  .subcategory-container{
+    display: none;
+  }
+
+  .footer-child{
+    width: 35rem;
+  }
+
   .detail-page{
     padding: 0;
   }
@@ -1821,6 +1922,10 @@ margin: 10px;
 
 @media screen and (max-width: 500px){
 
+  .navbar{
+    padding: 0;
+  }
+
   .menu-container{
     width:50%;
   }
@@ -1830,7 +1935,7 @@ margin: 10px;
   }
 
   .news-title{
-    margin-top: 1 rem;
+    margin-top: 1rem;
   }
 
   .search-box{
@@ -1866,6 +1971,13 @@ margin: 10px;
 }
 
 @media screen and (max-width: 400px){
+
+  .search-bar{
+    width: 85%;
+    left: 2rem;
+    top: 15rem;
+  }
+
   .subcategory{
     width:90%;
     height:30rem;
