--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -76,7 +76,6 @@ button {
   padding: 1rem;
   border-radius: 0.5rem;
   border: 0.1rem #a4a4a4 solid;
-  font-size: 1.6rem;
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -103,7 +102,6 @@ button.small {
 /* Header */
 header a {
   color: #00A349;
-  font-size: 16px;
   margin: 0 10px;
   display: flex;
   align-items: center;
@@ -1985,7 +1983,7 @@ margin: 10px;
 
 @media screen and (max-width: 400px){
   body{
-    font-size: 1.2rem;
+    font-size: 1.2rem!important;
   }
 
   .copyright-container{
