--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1644,6 +1644,7 @@ margin: 10px;
     height: 5rem;
     border-radius: 10px;
     z-index: 10;
+    transition: scroll 1s ease-in-out;
   }
 
   #pic{
