--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,11 +35,24 @@ header {
 
 main {
   grid-area: main;
-  padding: 1rem;
+  padding: .8rem 1rem;
 }
 footer {
   grid-area: footer;
  
+}
+
+.main-content{
+  display: grid;
+  grid-template-columns: 20% 80%;
+}
+
+/*Home content*/
+.home-upper{
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-column-gap: .3rem;
+  margin-bottom: .5rem;
 }
 /* Common */
 .product-banner {
@@ -308,7 +321,6 @@ a.brand img{
 
 .category{
   background-color: #007a37;
-  margin-top: 1rem;
   padding: 5px 20px;
   color: #fff;
   cursor:default;
@@ -343,11 +355,6 @@ a.brand img{
   margin-right: 1rem;
 }
 
-.main-content{
-  width: 80%;
-  margin-left: 20%;
-  padding-left: .5rem;
-}
 
 /*Home page*/
 
@@ -606,7 +613,7 @@ img.large {
 }
 
 .cart-card{
-  width: 35rem !important;
+  width: 32rem !important;
   display: flex;
 }
 
@@ -1200,6 +1207,10 @@ margin: 10px;
 
 /*Search page*/
 
+.search-screen{
+  padding-left: 1rem;
+}
+
 .search-screen h3{
   background-color: #007a37;
   color: #fff;
@@ -1265,9 +1276,6 @@ margin: 10px;
   width: 100%;
 }
 
-.introinfo-field{
-  padding-top: 3rem;
-}
 
 .intro-page h1{
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#002400+0,005700+17,008a00+33,52b152+67,83c783+83,b4ddb4+100 */
@@ -1391,13 +1399,13 @@ margin: 10px;
 }
 
 .service-container{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: 40rem 40rem;
+  padding-left: 4rem;
 }
 
 .service-card{
-  margin-bottom: 5rem;
   width: 40rem;
   height: 37rem;
   box-shadow: 1px 1px 1px 1px #f0f0f0;
@@ -1605,7 +1613,7 @@ margin: 10px;
   /*Sidebar*/
 
   .sidebar{
-    width: 20%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     float: left;
@@ -1740,7 +1748,12 @@ margin: 10px;
 }
 
 @media screen and (max-width: 800px){
-
+  .home-upper{
+    grid-template-columns: auto;
+  }
+  .main-content{
+    grid-template-columns: auto;
+  }
   .image-product{
     justify-content: center;
     display: flex;
@@ -1802,11 +1815,6 @@ margin: 10px;
     padding:0;
   }
 
-  .main-content{
-    width: 100%;
-    margin-left:0;
-  }
-
   .news-content{
     display: none;
   }
@@ -1863,7 +1871,7 @@ margin: 10px;
     width: 100%!important;
   }
 
-  .upper-content{
+  .home-content{
     width: 100%!important;
   }
 
@@ -1882,7 +1890,6 @@ margin: 10px;
 
   .introinfo-field{
     width: 100%;
-    padding-top: 3rem;
   }
 
   .lower-nav{
