--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -307,10 +307,11 @@ a.brand img{
   flex: 1 1 25rem;
 }
 .col-2 {
-  flex: 2 1 50rem;
+  flex: 2 1 30rem;
+  max-width: 100%;
 }
 .col-3 {
-  flex: 32 1 70rem;
+  flex: 3 1 70rem;
 }
 .min-30 {
   min-width: 30rem;
@@ -388,6 +389,8 @@ img.large {
   align-items: center;
   width: 32rem;
 }
+
+
 
 .detail-product{
   width: 40rem;
@@ -1775,6 +1778,7 @@ margin: 10px;
     min-width: 15rem;
     height: auto;
   }
+
   
   .counter{
     display: flex;
